# Kisiel-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Shaders/: flatColour.frag  flatColour.vert
include_dependencies/glad/: glad.h
src/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  System.h  SystemManager.cpp  SystemManager.h  Window.cpp  Window.h  glad.c  main.cpp
